[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dungeon/Dungeon.gd" type="Script" id=1]
[ext_resource path="res://Dungeon/Assets/BG.jpg" type="Texture" id=2]
[ext_resource path="res://Dungeon/Assets/Fog.png" type="Texture" id=3]
[ext_resource path="res://Dungeon/Room/Room.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dungeon/Assets/PartyIcon.jpg" type="Texture" id=5]
[ext_resource path="res://Dungeon/DungeonParty.gd" type="Script" id=6]

[node name="Dungeon" type="Node2D"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 1083.09, 605.444 )
scale = Vector2( 1.1515, 1.1529 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Fog" type="Light2D" parent="." index="1"]

visible = false
light_mask = 0
position = Vector2( -390.569, -234.65 )
scale = Vector2( 2711.11, 1488.25 )
enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0.5, 0.5 )
texture_scale = 1.0
color = Color( 0, 0, 0, 1 )
energy = 1.0
mode = 3
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Range", "Shadow", "Visibility" ]

[node name="Room1" parent="." index="2" groups=[
"Rooms",
] instance=ExtResource( 4 )]

position = Vector2( 68.5902, 303.24 )

[node name="Room2" parent="." index="3" groups=[
"Rooms",
] instance=ExtResource( 4 )]

position = Vector2( 310.46, 144.4 )

[node name="Room3" parent="." index="4" groups=[
"Rooms",
] instance=ExtResource( 4 )]

position = Vector2( 314.071, 397.101 )

[node name="Room4" parent="." index="5" groups=[
"Rooms",
] instance=ExtResource( 4 )]

position = Vector2( 541.501, 281.58 )

[node name="Room5" parent="." index="6" groups=[
"Rooms",
] instance=ExtResource( 4 )]

position = Vector2( 740.051, 86.6402 )

[node name="Room6" parent="." index="7" groups=[
"Rooms",
] instance=ExtResource( 4 )]

position = Vector2( 740.051, 288.8 )

[node name="Room7" parent="." index="8" groups=[
"Rooms",
] instance=ExtResource( 4 )]

position = Vector2( 743.661, 462.081 )

[node name="Party" type="Sprite" parent="." index="9"]

position = Vector2( -100, 300 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="Party" index="0"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="tween_completed" from="Party/Tween" to="Party" method="_on_Tween_tween_completed"]


